# sim_dynamics_eval

./: README.md
Trajectory_Comparison/: compare_trajectory.m  hw (2).csv  hw.csv  sim (2).csv  sim.csv
mechanical_evaluation/: CMakeLists.txt  package.xml
mechanical_evaluation/src/: just_move.cpp  long_run.cpp
